objects/spExams__Answer__c.object
<CustomObject>
    <fields>
        <fullName>spExams__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>spExams__IsCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>spExams__Question__c</fullName>
        <label>Question</label>
        <referenceTo>spExams__Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Answer No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>